--- a/index.html
+++ b/index.html
@@ -9,80 +9,44 @@
     <body>
 
 
-        <!--
+      <h1>Náš tým</h1>  
+        
+        <div class="boxy">
 
-
-            Opravdu nechceš zkusit tu těží variantu, kde musíš vymyslet i strukturu HTML?
-            V tomto úkolu je to docela jednoduché.
-            Tak to zkus a vyber si radši ten o maličko těžší level 2, co?
-
-            Pokud jsi srabík a trváš na jednodušší verzi, tak zaskroluj trochu dolů.
-            Tento komentář můžeš samozřejmě celý smazat.
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-        -->
-
-        <h1>Náš tým</h1>
-
-
-        <div class="tym">
-
-            <div class="osoba">
-                <div class="foto">
-                    <img src="images/zena1.jpg" alt="Jarmila">
-                </div>
-                <div class="popis">
+            <div class="box1"> 
+                <img src="images/zena1.jpg" alt="Jarmila">
+                <div class="text1">
                     <h2>Jarmila Bloňďatá</h2>
                     <p>Kontrolu rybářský jiný čem noc vesuvu. V ho. Potravou ať dlouhou nízké v postupovali přemístí. </p>
-                </div>
+                </div>    
             </div>
 
-            <div class="osoba">
-                <div class="foto">
-                    <img src="images/zena2.jpg" alt="Klotylda">
-                </div>
-                <div class="popis">
+
+            <div class="box2">
+                <img src="images/zena2.jpg" alt="Klotylda">
+                <div class="text2">
                     <h2>Klotylda Usměvavá</h2>
                     <p>Z část, jde myotis i navrhovanou hladce soudy plavby k zdroj připomenou za vzhledem i vyhýbá žlutě.</p>
                 </div>
             </div>
 
-            <div class="osoba">
-                <div class="foto">
-                    <img src="images/zena3.jpg" alt="Lucie">
-                </div>
-                <div class="popis">
+
+            <div class="box3">
+                <img src="images/zena3.jpg" alt="Lucie">
+                <div class="text3">
                     <h2>Lucie Krátkovlasá</h2>
                     <p>Západních k dostává araby turistů s divný si jí potřebné i do bílá důležití přírody dáti.</p>
                 </div>
             </div>
 
-            <div class="osoba">
-                <div class="foto">
-                    <img src="images/zena4.jpg" alt="Emílie">
-                </div>
-                <div class="popis">
+            <div class="box4">
+                <img src="images/zena4.jpg" alt="Emílie">
+                <div class="text4">
                     <h2>Emílie Marnotratná</h2>
                     <p>Kosila neznámý kluby desítek k jsem tj. rozdíl klidně budov vloni, ústní že mír vesnic kutuře novou.</p>
                 </div>
             </div>
-
-        </div><!-- konec .tym -->
+        </div>
 
     </body>
 </html>
